lldpd (1.0.15)
 * Fix:
   + Really don't send VLANs when there are too many (#520)

lldpd (1.0.14)
 * Changes
   + Add configure commands to alter inventory TLVs (#508)
 * Fix:
   + Update seccomp rules for newer kernel/libc (#488)
   + Correctly handle an interface whose index has changed (#490)
   + Don't send VLANs when there are too many (#501)

lldpd (1.0.13)
 * Fix:
   + Add support for 2.5G, 5G, 25G and 50G based Ethernet (#475)
   + Fix link-down detection on OpenBSD (#476)
   + Fix LLDP packets encapsuled in VLAN 0 in some conditions
   + Fix heap overflow when reading SONMP. CVE-2021-43612.
     Thanks to Jeremy Galindo for discovering this one.

lldpd (1.0.12)
  * Fix:
    + Use a dedicated file lock to prevent concurrent changes from lldpcli.
    + Require/display powerpairs for Dot3 power even when device type is PD.
  * Changes:
    + Provide a Docker image and make it available on GitHub.

lldpd (1.0.11)
  * Changes:
    + Disable LLDP in firmware for Intel X7xx cards.
  * Fix:
    + Ensure Intel E8xx cards can transmit LLDP packets.

lldpd (1.0.10)
  * Fix:
    + Fix chroot directory creation.

lldpd (1.0.9)
  * Fix:
    + Do not use interface alias if we set it ourselves.
    + More memory leak fixes on duplicate TLVs in LLDP, CDP and EDP
      (related to CVE-2020-27827).
    + On OSX, handle empty groups correctly when looking for a free UID/GID.
  * Changes:
    + Display port status with "show interfaces".
    + Do not display "age" and "via" when using "show interfaces".

lldpd (1.0.8)
  * Fix:
    + Out-of-bound read access when parsing LLDP-MED civic address in
      liblldpctl for malformed fields.
    + Fix memory leak when receiving LLDPU with duplicate fields.
      CVE-2020-27827.
  * Changes:
    + Enable "router" capability bit when IPv6 routing is enabled.

lldpd (1.0.7)
  * Fix:
    + Do not listen only to LLDP packets on Linux. When an interface
      is enslaved to an Open vSwitch, incoming packets are missed.

lldpd (1.0.6)